@@ -27,8 +27,14 @@
             <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
             <!-- Splash screen -->
             <meta-data android:name="android.app.splash_screen_drawable" android:resource="@drawable/splash"/>
-            <!-- QTBUG-69810 (Android P API compatibility warnings) -->
-            <meta-data android:name="android.app_extract_android_style" android:value="none"/>
+            <!-- extract android style -->
+            <!-- available android:values :
+                * default - In most cases this will be the same as "full", but it can also be something else if needed, e.g., for compatibility reasons
+                * full - useful QWidget & Quick Controls 1 apps
+                * minimal - useful for Quick Controls 2 apps, it is much faster than "full"
+                * none - useful for apps that don't use any of the above Qt modules
+                -->
+            <meta-data android:name="android.app_extract_android_style" android:value="minimal"/>
             <!-- Background running -->
             <meta-data android:name="android.app.background_running" android:value="false"/>
             <!-- Auto screen scale factor -->
